--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <div class="col">
                         <div class="row container-fluid">
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon white-letter d-flex align-items-center justify-content-center"
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon my-2 white-letter d-flex align-items-center justify-content-center"
@@ -223,7 +223,7 @@
                         </div>
                         <div class="row container-fluid">
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon my-2 white-letter d-flex align-items-center justify-content-center"
@@ -238,7 +238,7 @@
                                 </div>
                             </div>
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon my-2 white-letter d-flex align-items-center justify-content-center"
@@ -259,7 +259,7 @@
                     <div class="col">
                         <div class="row container-fluid">
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon my-2 white-letter d-flex align-items-center justify-content-center"
@@ -274,7 +274,7 @@
                                 </div>
                             </div>
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon my-2 white-letter d-flex align-items-center justify-content-center"
@@ -293,7 +293,7 @@
                         </div>
                         <div class="row container-fluid">
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon my-2 white-letter d-flex align-items-center justify-content-center"
@@ -308,7 +308,7 @@
                                 </div>
                             </div>
                             <div
-                                class="col-md-6 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
+                                class="col-md-6 col-sm-12 col-lg-6 border badge-light d-flex align-items-center summary-container-item"
                             >
                                 <div
                                     class="mx-4 summary-container-icon white-letter d-flex align-items-center justify-content-center"
@@ -328,7 +328,9 @@
             </div>
 
             <!-- DATA CONTAINER -->
-            <div class="container-fluid container-md data-container">
+            <div
+                class="container-fluid container-md data-container justify-content-between"
+            >
                 <div class="row container-fluid justify-content-between">
                     <div class="col">
                         <div class="row">
